# Burrito

./: .gitignore  AGENTS.md  Jenkinsfile  Jenkinsfile.cleanup-registry  README.md  burrito-wrk_bfc4ea22b20545d2a7206e933851d850.yaml
.github/workflows/: codeql.yml  jenkins-trigger.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.seed-analytics  Jenkinsfile.seed-analytics  README.md  docker-compose.yml  nest-cli.json  package-lock.json  package.json
backend/apps/intelligence-fn-rs/: Cargo.toml  Dockerfile  README.md
backend/apps/intelligence-fn-rs/assets/: sentiment_words.json
backend/apps/intelligence-fn-rs/src/: main.rs
backend/config/: configuration.js
backend/docs/: analytics-ms-facade-runtime-plan.md  analytics-ms-plan.md  group-form-relation-plan.md  group-membership-plan.md  intelligence-ideas-plan.md  intelligence-knative-migration-runbook.md  intelligence-ms-enable-plan.md  intelligence-ms-refactor-plan.md  notification-service-plan.md  observability-rollout-runbook.md
backend/k8s/: evaluation-system.local.yaml  evaluation-system.yaml  frontend.yaml  intelligence-fn-rs.knative.yaml  seed-analytics-job.yaml  seed-analytics-rbac.yaml
backend/scripts/: seed-analytics.js  (+4 more)
burrito-front/: Dockerfile  README.md  angular.json  package-lock.json  package.json  proxy.conf.json
docs/: analytics-text-analysis-subscription-plan.md  demo-population-plan.md  frontend-cicd-plan.md  istio-rollout-plan.md  production-github-app-migration-runbook.md  production-ruleset-after-2026-02-27.json  production-ruleset-baseline-2026-02-26.json
(+388 files in other folders)
